<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.nhoang53.occlibrary2.SplashActivity"
    android:background="@drawable/splash">

    <TextView
        android:text="@string/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView52"
        android:gravity="right"
        android:textSize="20sp"
        android:textColor="@color/authors"
        android:textStyle="normal|bold|italic"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:text="@string/splash"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:textColor="@color/quotes"
        android:textAlignment="center"
        android:gravity="right"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/empty_background" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        android:text="@string/welcome_occ_library"
        android:textSize="40sp"
        android:textStyle="normal|bold"
        android:textColor="@color/title"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="29dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
