<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.orangecoastcollege.cs273.nhoang53.occlibrary2.fragments.ContactUsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="edu.orangecoastcollege.cs273.nhoang53.occlibrary2.ContactActivity"
        android:orientation="vertical"
        android:weightSum="10"
        android:background="@color/profile">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.4">

            <ImageView
                app:srcCompat="@drawable/calendar"
                android:id="@+id/imageView2"
                android:scaleType="fitStart"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="20" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginLeft="10dp">

                <TextView
                    android:text="@string/office_hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView36"
                    android:textStyle="normal|bold"
                    android:fontFamily="serif"
                    android:textSize="18sp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:text="@string/hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView44"
                    android:textSize="18sp"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/contact"
                android:id="@+id/imageView9"
                android:layout_weight="20"
                android:scaleType="fitStart" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:layout_marginLeft="10dp">

                <TextView
                    android:text="@string/contact_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView46"
                    android:fontFamily="serif"
                    android:textSize="18sp"
                    android:textStyle="normal|bold"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:text="@string/info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView45"
                    android:layout_marginLeft="5dp"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="1.5"
            android:layout_height="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/map2"
                android:id="@+id/imageView11"
                android:layout_weight="20"
                android:scaleType="fitStart" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:layout_marginLeft="15dp">

                <TextView
                    android:text="@string/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView48"
                    android:textSize="18sp"
                    android:textStyle="normal|bold"
                    android:fontFamily="serif"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:text="@string/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView47"
                    android:fontFamily="serif"
                    android:textSize="18sp"
                    android:textAlignment="viewStart" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="3.4"
            android:layout_height="0dp">

            <com.google.android.gms.maps.MapView
                android:id="@+id/googleMapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"/>
        </LinearLayout>

    </LinearLayout>


</FrameLayout>
